Add: Detail Understanding of Power and Sine Easing

--- a/pages/03a_power-easing/index.html
+++ b/pages/03a_power-easing/index.html
@@ -36,6 +36,11 @@
               >Gsap Easings</a
             >.
           </p>
+          <div class="demo flex-center">
+            <div class="btn">button</div>
+            <div class="toast">toast</div>
+            <div class="card">card</div>
+          </div>
         </section>
       </div>
 
